openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-helloworld
spec:
  selector:
    matchLabels:
      app: node-helloworld
  template:
    metadata:
      labels:
        app: node-helloworld
    spec:
      containers:
      - name: node-helloworld
        image: image-registry.openshift-image-registry.svc:5000/jm-pipelines-testing/jm-node-helloworld:037c4b5
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - containerPort: 8080
