openshift/ocp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-helloworld
spec:
  selector:
    app: node-helloworld
  ports:
  - port: 8080
    targetPort: 8080
